<resources>
    <string name="app_name">Math Reinforcement Tool</string>
    <string name="settingsTitle">Settings</string>
    <string name="darkSwitch">Dark Mode</string>
    <string name="lightSwitch">Light Mode</string>
    <string name="fontText">Font Size:</string>
    <string name="smallButton">Small</string>
    <string name="medButton">Med</string>
    <string name="largeButton">Large</string>
    <string name="privacyPolicyButton">Privacy Policy</string>
    <string name="agreementButton">User Agreement</string>
    <string name="bugButton">Report a Bug</string>
    <string name="volumeLabel">Volume</string>
    <string name="RestartButton">Restart Progress</string>
    <string name="settingsButtonText">Settings</string>
    <string name="multipleChoiceButtonText">Multiple Choice</string>
    <string name="btnLevelSelect">Level Select</string>
    <string name="userAgreement">This is the User Agreement, our app uses randomly generated numbers to test your math skills, if this is not okay please select the back button</string>
    <string name="privacyPolicy">This is our Privacy Policy. We promise not to sell your personal information to other companies</string>
    <string name="userAgreed">You have agreed to our terms</string>

    <!-- Joeys Strings (If you use, put them ^)-->

    <!--activity_main_menu.xml-->
    <string name="textAddition">Addition</string>
    <string name="textSubtraction">Subtraction</string>
    <string name="textMultiplication">Multiplication</string>
    <string name="textDivision">Division</string>
    <string name="textPerimeter">Perimeter</string>
    <string name="textArea">Area</string>
    <string name="textAlgebra">Algebra</string>
    <string name="btnDifficultyEasy">Easy</string>
    <string name="btnDifficultyMedium">Medium</string>
    <string name="btnDifficultyHard">Hard</string>
    <string name="Show_MTA_Time">Your time was %1$d:%2$02d!</string>
    <string name="textNotes">Notes</string>
    <string name="Title">Simply Calculated</string>

    <!--activity_math_template.xml-->
    <string name="btnBack">Back</string>
    <string name="btnOK">OK</string>
    <string name="textAnswerDisplay">Answer:</string>
    <string name="textAnswerCorrect">Yes</string>
    <string name="textAnswerIncorrect">No</string>
    <string name="textCorrectAnswerCount">%1$d/20</string>

    <!--activity_math_shapes.xml-->
    <string name="textUnitMeters">%1$dm</string>
    <string name="textUnitMetersStr">%1$sm</string>
    <string name="textNumPerimTotal">Total %1$s = %2$d</string>
    <string name="textNumPerimTotalStr">Total %1$s = %2$s</string>

    <!--activity_level_select.xml-->
    <string name="levelText">Level</string>
    <string name="startLevel">Start</string>
    <string name="backLevel">Cancel</string>

    <!--activity_level_type_select.xml-->
    <string name="textSelectType">Select The Type Of Question</string>
    <string name="btnAlgebra">Algebra</string>
    <string name="btnGeometry">Geometry</string>
    <string name="btnCombined">Challenges</string>
    <string name="btnMC">Multiple Choice</string>

    <string name="textAdditionDesc">Addition Description Here</string>
    <string name="textSubtractionDesc">Subtraction Description Here</string>
    <string name="textMultiplicationDesc">Multiplication Description Here</string>
    <string name="textDivisionDesc">Division Description Here</string>
    <string name="textCalculate">Combined Algebra</string>
    <string name="textCalculateDesc">Enter the Value</string>

    <string name="btnMCStan">Standard</string>
    <string name="btnMCTime">Timed</string>
    <string name="btnMCStreak">Streak</string>
    <string name="btnMCCombo">Combined</string>
    <string name="textMCCombo">Combined</string>

    <string name="textMCAdditionDesc">Add the values and pick the correct answer</string>
    <string name="textMCSubtractionDesc">Subtract the values and pick the correct answer</string>
    <string name="textMCMultiplicationDesc">Multiply the values and pick the correct answer</string>
    <string name="textMCDivisionDesc">Divide the values and pick the correct answer</string>
    <string name="textMCComboDesc">Use all 4 operations the values and pick the correct answer</string>

    <string name="textAreaDesc">Calculate the area of the </string>
    <string name="textPerimeterDesc">Perimeter Description Here</string>

    <string name="textMCQStandardDesc">MCQ Description Here</string>
    <string name="textMCQTimerDesc">MCQ Description Here</string>
    <string name="textMCQStreakDesc">MCQ Description Here</string>
    <string name="sharedPrefFailed">Failed to generate levels</string>

    <!--activity_level_select.xml Level Descriptions-->
    <string name="textActivityType">Activity Type:</string>
    <string name="textLevelDifficulty">Level Difficulty:</string>
    <string name="textLevelDesc">Level Description:</string>
    <string name="Addition">Addition</string>
    <string name="Subtraction">Subtraction</string>
    <string name="Multiplication">Multiplication</string>
    <string name="Division">Division</string>
    <string name="Area">Area</string>
    <string name="Perimeter">Perimeter</string>
    <string name="Algebra">Combined Algebra</string>
    <string name="MCQ">Multiple Choice Questions</string>
    <string name="testSelect">Test Level Select</string>
    <string name="Easy">Easy</string>
    <string name="Medium">Medium</string>
    <string name="Hard">Hard</string>
    <string name="AdditionEasyDescription">insert description and rules</string>
    <string name="AdditionMediumDescription">insert description and rules</string>
    <string name="AdditionHardDescription">insert description and rules</string>
    <string name="SubtractionEasyDescription">insert description and rules</string>
    <string name="SubtractionMediumDescription">insert description and rules</string>
    <string name="SubtractionHardDescription">insert description and rules</string>
    <string name="MultiplicationEasyDescription">insert description and rules</string>
    <string name="MultiplicationMediumDescription">insert description and rules</string>
    <string name="MultiplicationHardDescription">insert description and rules</string>
    <string name="DivisionEasyDescription">insert description and rules</string>
    <string name="DivisionMediumDescription">insert description and rules</string>
    <string name="DivisionHardDescription">insert description and rules</string>
    <string name="AreaEasyDescription">insert description and rules</string>
    <string name="AreaMediumDescription">insert description and rules</string>
    <string name="AreaHardDescription">insert description and rules</string>
    <string name="PerimeterEasyDescription">insert description and rules</string>
    <string name="PerimeterMediumDescription">insert description and rules</string>
    <string name="PerimeterHardDescription">insert description and rules</string>
    <string name="AlgebraEasyDescription">insert description and rules</string>
    <string name="AlgebraMediumDescription">insert description and rules</string>
    <string name="AlgebraHardDescription">insert description and rules</string>
    <string name="MCQEasyDescription">insert description and rules</string>
    <string name="MCQMediumDescription">insert description and rules</string>
    <string name="MCQHardDescription">insert description and rules</string>
    <string name="MCStandardAddition"></string>
    <string name="MCTimerAddition"></string>
    <string name="MCStreakAddition"></string>
    <string name="MCStandardSubtraction"></string>
    <string name="MCTimerSubtraction"></string>
    <string name="MCStreakSubtraction"></string>
    <string name="MCStandardMultiplication"></string>
    <string name="MCTimerMultiplication"></string>
    <string name="MCStreakMultiplication"></string>
    <string name="MCStandardDivision"></string>
    <string name="MCTimerDivision"></string>
    <string name="MCStreakDivision"></string>
    <string name="MCCombo"></string>

    <!--activity_multiple_choice.xml UI Text-->
    <string name="streakText">Streak: </string>
    <string name="timerText">Timer: </string>
    <string name="questionStart">What does </string>
    <string name="questionEnd">\ equal\?</string>

    <!--activity_note_taking.xml-->
    <string name="noteDelete">Delete Note</string>
    <string name="noteEdit">Edit Note</string>
    <string name="dialogDeleteTitle">Are you sure you want to delete this note?</string>
    <string name="dialogYes">Yes</string>
    <string name="dialogCancel">Cancel</string>
    <string name="fabSave">Save Edits</string>
    <string name="fabNew">Create New Note</string>
    <string name="etHeading">Enter Note Title</string>
    <string name="etBody">Enter Note Body</string>
    <string name="toastEditable">Fields are now editable. Remember to Save!!!</string>
    <string name="toastNoteIncorrect">Error: Incorrect title.</string>


    <!--activity_stats.xml-->
    <string name="Activity">Activity</string>
    <string name="Mode">Mode</string>
    <string name="Operation">Operation</string>
    <string name="Difficulty">Difficulty</string>
    <string-array name="Activities">
        <item>Multiple Choice</item>
        <item>Math Template</item>
        <item>Algebra Input</item>
        <item>Geometry Input</item>
    </string-array>
    <string-array name="MCModes">
        <item>Standard</item>
        <item>Streak</item>
        <item>Timed</item>
    </string-array>
    <string-array name="AlgebraModes">
        <item>Standard</item>
        <item>Combination</item>
    </string-array>
    <string-array name="GeometryModes">
        <item>Standard</item>
    </string-array>
    <string-array name="MCTypes">
    <item>Addition</item>
    <item>Subtraction</item>
    <item>Multiplication</item>
    <item>Division</item>
    </string-array>
    <string-array name="AGTypes">
        <item>Addition</item>
        <item>Subtraction</item>
        <item>Multiplication</item>
        <item>Division</item>
        <item>Area</item>
        <item>Perimeter</item>
    </string-array>
    <string-array name="Difficulty">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
</resources>