<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity"
    >


    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingsTitle"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/DarkSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onDarkClick"
        android:layout_below="@id/Title"
        android:text="@string/darkSwitch"
        android:textSize="25sp"

        />

    <TextView
        android:id="@+id/FontLabel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/DarkSwitch"
        android:text="@string/fontText"
        android:textSize="30sp"/>

    <RadioButton
        android:id="@+id/SmallButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/DarkSwitch"
        android:onClick="onSmallClick"
        android:layout_toEndOf="@id/FontLabel"
        android:gravity="center"
        android:text="@string/smallButton"
        android:textSize="25sp" />


    <RadioButton
        android:id="@+id/MedButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/DarkSwitch"
        android:onClick="onMedClick"
        android:layout_toEndOf="@id/SmallButton"
        android:gravity="center"
        android:text="@string/medButton"
        android:textSize="25sp" />

    <RadioButton
        android:id="@+id/LargeButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/DarkSwitch"
        android:onClick="onLargeClick"
        android:layout_toEndOf="@id/MedButton"
        android:gravity="center"
        android:text="@string/largeButton"
        android:textSize="25sp" />

</RelativeLayout>