<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lvlSelect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LevelTypeSelect">

    <Button
        android:id="@+id/buttonTypeMC"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:onClick="onClickMC"
        android:text="@string/btnMC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonTypeGeometry"
        app:layout_constraintTop_toBottomOf="@+id/textViewLevelTypeSelect" />

    <Button
        android:id="@+id/buttonTypeAlgebra"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:onClick="onClickAlgebra"
        android:text="@string/btnAlgebra"
        app:layout_constraintEnd_toStartOf="@+id/buttonTypeGeometry"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLevelTypeSelect" />

    <Button
        android:id="@+id/buttonTypeGeometry"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:onClick="onClickGeometry"
        android:text="@string/btnGeometry"
        app:layout_constraintEnd_toStartOf="@+id/buttonTypeMC"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonTypeAlgebra"
        app:layout_constraintTop_toBottomOf="@+id/textViewLevelTypeSelect" />

    <FrameLayout
        android:id="@+id/flLevelType"
        android:layout_width="372dp"
        android:layout_height="615dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:background="#A5A3A3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTypeGeometry"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewLevelTypeSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/textSelectType"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>